test/errors/ifBranches.chpl
var b : bool;
var y = if b then 42 else "hello";

var z =
  if b
  then 42
  else "hello";
